force-app/main/default/objects/Payment__c/fields/Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Card_Type__c</fullName>
    <label>Card Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>