force-app/main/default/objects/Payment__c/fields/Entry_Method__c.field-meta.xml
<CustomField>
    <fullName>Entry_Method__c</fullName>
    <label>Entry Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>