force-app/main/default/objects/Payment__c/fields/Error_Category__c.field-meta.xml
<CustomField>
    <fullName>Error_Category__c</fullName>
    <label>Error Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>