force-app/main/default/objects/Payment__c/fields/Last_4_Digit__c.field-meta.xml
<CustomField>
    <fullName>Last_4_Digit__c</fullName>
    <label>Last 4 Digit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>