force-app/main/default/objects/Payment__c/fields/Payment_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Creation_Date__c</fullName>
    <label>Payment Creation Date</label>
    <type>DateTime</type>
</CustomField>