force-app/main/default/objects/Payment__c/fields/PaymentID__c.field-meta.xml
<CustomField>
    <fullName>PaymentID__c</fullName>
    <label>PaymentID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>