force-app/main/default/objects/Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Work_Order__c</columns>
    <columns>PaymentID__c</columns>
    <columns>Source_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Card_Type__c</columns>
    <columns>Payment_Creation_Date__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>